# PlutosPot

./: .gitignore  README.md
Backend/: README.md  env-example.txt  package-lock.json  package.json  tsconfig.json
Backend/source/: server.ts
Backend/source/common/: initial-values.ts
Backend/source/controllers/: lottery.controller.ts  players.controller.ts
Backend/source/db/: airdrop-db.ts  lottery-db.ts  player-db.ts  winner-history-db.ts
Backend/source/jobs/: airdrop-job.ts  check-sum-job.ts  find-winner-job.ts  jobs.ts
Backend/source/lib/: caseStyles.ts
Backend/source/routes/: routes.ts
Backend/source/services/: check-sum.ts  define-winner.ts  logger.ts  snapshot.ts
PlutoEnvironmentsContracts/: README.md
PlutoEnvironmentsContracts/airdrop/: Cargo.toml
PlutoEnvironmentsContracts/airdrop/examples/: schema.rs
PlutoEnvironmentsContracts/airdrop/schema/: config_response.json  init_msg.json
PlutoEnvironmentsContracts/airdrop/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
PlutoEnvironmentsContracts/airdrop/src/testing/: tests.rs
PlutoEnvironmentsContracts/collector/: Cargo.toml
PlutoEnvironmentsContracts/collector/examples/: schema.rs
PlutoEnvironmentsContracts/collector/schema/: config_response.json
PlutoEnvironmentsContracts/cw20/: .gitignore  Cargo.toml
PlutoEnvironmentsContracts/distributor/: .gitignore  Cargo.toml
PlutoEnvironmentsContracts/gov/: Cargo.toml
PlutoLotteryContract/: Cargo.toml
PlutoLotteryContract/examples/: schema.rs
PlutoLotteryContract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
(+34 files in other folders)
