[package]
name = "pluto-airdrop"
version = "1.0.0"
authors = ["ingbond"]
edition = "2018"
description = "A Airdrop contract for Pluto Protocol - allow users to claim rewards with Merkle Tree based proof"
license = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces

[dependencies]
cw20 = "0.9"
cosmwasm-std = { version = "0.16", features = ["iterator"] }
cosmwasm-storage = { version = "0.16", features = ["iterator"] }
schemars = "0.8.1"
sha3 = { version = "0.9.1", default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4"
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = "0.16"
